# AI-News

./: .gitignore  README.md  pyproject.toml
.github/: automation-trigger.txt
.github/workflows/: daily-ai-news.yml
AI-news/: README.md  pyproject.toml
AI-news/docs/superpowers/plans/: 2026-04-30-daily-ai-news-implementation.md
AI-news/src/ai_news/: __init__.py  config.py  email_sender.py  main.py  models.py  news_sources.py  report_store.py  summarizer.py
AI-news/tests/: test_config.py  test_email_sender.py  test_fetchers.py  test_main.py  test_news_sources.py  test_report_store.py  test_summarizer.py
docs/superpowers/specs/: 2026-04-30-daily-ai-news-design.md
reports/: 2026-04-30.md  2026-05-01.md  2026-05-02.md  2026-05-03.md  2026-05-04.md  2026-05-05.md  2026-05-06.md  2026-05-07.md  2026-05-08.md  2026-05-09.md  2026-05-10.md  2026-05-11.md  2026-05-12.md  2026-05-13.md  2026-05-14.md  2026-05-15.md  2026-05-16.md  2026-05-17.md  2026-05-18.md  2026-05-19.md  2026-05-20.md
scripts/: trigger-daily-ai-news.ps1
src/ai_news/: __init__.py  config.py  email_sender.py  main.py  models.py  news_sources.py  report_store.py  summarizer.py
tests/: test_config.py  test_email_sender.py  test_fetchers.py  test_main.py  test_news_sources.py  test_report_store.py  test_summarizer.py  test_workflow_schedule.py
