[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-news"
version = "0.1.0"
description = "Daily AI news email automation for beginner AI trainers"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.11",
    "markdown>=3.6",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[project.scripts]
ai-news = "ai_news.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
